# book-of-changes

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
migrations/2020-07-05-121339_user/: up.sql
src/: main.rs  schema.rs  test.rs
src/bc_user/: mod.rs
src/bc_user/controller/: controller_search.rs
src/bc_user/entity/: user_entity.rs
src/bc_user/req/: gua_list_req.rs  mod.rs
src/bc_user/resp/: gua_list_resp.rs  mod.rs
src/bc_user/service/: test.rs  user_service.rs
src/config/: init_db.rs
src/controller/: mod.rs
src/entity/: user_entity.rs
src/service/: user_service.rs
src/user/controller/: controller_search.rs  mod.rs
src/utils/: CustomeError.rs  ResultMsg.rs  mod.rs
tests/: sum_test.rs
unit_test/: Cargo.toml
unit_test/src/: lib.rs
unit_test/tests/: sum.rs
