[package]
name = "book-of-changes"
version = "0.1.0"
authors = ["litttley <617914118@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt="1.1.1"
actix-web="2.0.0"
futures = "0.3.5"
actix-threadpool="0.3.2"

#env_logger="0.6"
#log日志
log = "0.4.8"
log4rs = "0.12.0"
nonblock-logger = { version = "0.1.5", default-features = false, features = ["color", "dbg"] }
#环境变量获取
dotenv = "0.15"
#参数校验
validator = "0.10.0"
validator_derive = "0.10.0"
#错误处理
anyhow = "1.0.31"
thiserror = "1.0"
#json序列化与反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = {version = "0.4.10", features = ["serde"] }
#deisel 数据库 orm框架
diesel = { version = "1.4.5", features = ["mysql", "r2d2","chrono"] }

